--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>My PWA App</h1>
-<button class="button button-primary" (click)="subscribeToNotifications()">
+<ons-button class="button button-primary" (click)="subscribeToNotifications()">
   Subscribe
-</button>
+</ons-button>
 
 <div>{{ pubObject }}</div>
